--- a/hw8/stocks/angular-app/src/app/components/wcard/wcard.component.html
+++ b/hw8/stocks/angular-app/src/app/components/wcard/wcard.component.html
@@ -18,8 +18,8 @@
       <h1 *ngIf='noChange' class="col text-right float-right font-weight-bold" style='color:black; text-align: right'>{{price| currency:'string':''}}</h1>
 
     </div>
-    <div class='row'>
-      <h3 class='col-md-6 text-left float-left'>
+    <div class='row mb-2'>
+      <h3 class='col text-left float-left'>
           {{name}}
       </h3>
 
