--- a/hw8/stocks/angular-app/src/app/watchlist/watchlist.component.html
+++ b/hw8/stocks/angular-app/src/app/watchlist/watchlist.component.html
@@ -17,7 +17,7 @@
 	</div>
 	<div  class='container' *ngIf="!spin">
 		<div *ngFor="let card of cards" class='row'>
-			<app-pcard [rawCardData]=card class="col "></app-pcard>
+			<app-wcard [rawCardData]=card class="col "></app-wcard>
 		</div>
 	</div>
 </div>
