--- a/hw8/stocks/angular-app/src/app/components/search/search.component.html
+++ b/hw8/stocks/angular-app/src/app/components/search/search.component.html
@@ -1,5 +1,6 @@
-<div id='ig-container' class="row">
-    <form class=" input-group input-group-lg col-md-4 " (ngSubmit)="onSubmit()">
+<div class="row ">
+    <div class=' col-md-4 col-sm-2 '></div>
+    <form class=" input-group input-group-lg col-md-4  col-sm-8 " (ngSubmit)="onSubmit()">
         <input class="form-control py-2 border-right-0" type="search" placeholder="Enter stock name"  aria-label="Large" aria-describedby="inputGroup-sizing-lg" id="search-input" 
         matInput
         [formControl]="myControl"
@@ -18,4 +19,5 @@
           </mat-option>
         </mat-autocomplete>
     </form>
+    <div class=' col-md-4 col-sm-2 '></div>
 </div>
