--- a/hw8/stocks/angular-app/src/app/details/details.component.html
+++ b/hw8/stocks/angular-app/src/app/details/details.component.html
@@ -30,7 +30,7 @@
     <div class="modal-body"> 
         <form> 
             <div class="form-group"> 
-                <label for="dateOfBirth"> 
+                <label for="price"> 
                     Current Price: {{price}} 
                 </label> 
                 <div class="input-group"> 
