--- a/hw8/stocks/angular-app/src/app/portfolio/portfolio.component.html
+++ b/hw8/stocks/angular-app/src/app/portfolio/portfolio.component.html
@@ -2,7 +2,7 @@
 	<app-nav></app-nav>
 	
 	<div  class='container text-center loading-container'>
-		<h1 class='row wl-title'>My Portfolio</h1>
+		<h1 class='row p-title'>My Portfolio</h1>
 		<div  class='text-center' *ngIf='cardsEmpty'>
 			<div class="alert alert-warning" role="alert"> 
 			  Currently you don't have any stock.
