--- a/hw8/stocks/angular-app/src/app/components/card/card.component.css
+++ b/hw8/stocks/angular-app/src/app/components/card/card.component.css
@@ -2,12 +2,15 @@
 	width: 50%;
 }
 .card-img{
-	/*padding-right:0;*/
+	padding-top:2%;
+}
+.col-md-3{
+	padding-top:0%;
 }
 .card-thumb{
-	min-height: 50%;
+/*	min-height: 50%;
 	max-height: 80%;
-	margin-top:2vh;
+	margin-top:2vh;*/
 	object-fit: cover;
 }
 
