--- a/hw8/stocks/angular-app/src/app/components/pcard/pcard.component.css
+++ b/hw8/stocks/angular-app/src/app/components/pcard/pcard.component.css
@@ -1,13 +1,5 @@
-
-
-.watch-card{
-	background-color: white;
-	border: 3px solid #F9F9F9;
-	border-radius: 3px;
-	font-size: small;
-	height: 100%;
-	cursor: pointer;
-	margin-bottom: 2%;
+.card{
+	margin-bottom: 3%;
 }
 
 .row button{
