--- a/hw8/stocks/angular-app/src/app/details/details.component.html
+++ b/hw8/stocks/angular-app/src/app/details/details.component.html
@@ -61,7 +61,7 @@
   	 	<h1 class="col " >{{ticker}}<span style="color:{{starColor}}"><fa-icon (click)="toggleStar()" [icon]="faStar" ></fa-icon></span></h1>
 
       <!-- green or red text -->
-      <h1 *ngIf='!noChange' class="col $img_names" [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right'>{{price| currency:'string':''}}</h1>
+      <h1 *ngIf='!noChange' class="col $img_names" [className]="changePositive ? 'col text-success' : 'col text-danger'" style='text-align: right'>{{price| currency:'string':''}}</h1>
       
       <!-- black text -->
       <h1 *ngIf='noChange' class="col $img_names" style='color:black; text-align: right'>{{price| currency:'string':''}}</h1>
@@ -70,15 +70,15 @@
   	 	<h2 class="col text-muted">{{name}}</h2>
 
       <!-- green or red numbers -->
-      <h2 *ngIf='!noChange' [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right; '> <fa-icon [icon]="faCaret"></fa-icon> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
+      <h2 *ngIf='!noChange' [className]="changePositive ? 'col text-success' : 'col text-danger'" style='text-align: right; '> <fa-icon [icon]="faCaret"></fa-icon> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
 
       <!-- black numbers -->
-      <h2 *ngIf='noChange' style='text-align: right; '> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
+      <h2 *ngIf='noChange' class='col' style='text-align: right; '> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
 
   	 </div> 
   	 <div class="row compact-row">
   	 	<h3 class="col text-muted">{{exchange}}</h3>
-  	 	<h3 class="text-muted" style='text-align: right'>{{date}}</h3>
+  	 	<h3 class="text-muted col" style='text-align: right'>{{date}}</h3>
   	 </div>
   	 <div class="row compact-row">
   	 	<div class='col'>
