--- a/Stocks/app/src/main/res/menu/options_menu.xml
+++ b/Stocks/app/src/main/res/menu/options_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:titleTextColor="@android:color/black"
+    >
 
     <item
         android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="Search"
         android:textColor="@color/black"
         app:actionProviderClass="com.android.stocks.AutoCompSearchProvider"
