--- a/Stocks/app/src/main/res/layout/activity_main.xml
+++ b/Stocks/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:background="@color/white"
         android:textColor="@color/black"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark" />
+        app:theme="@style/MyToolbarStyle" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
