--- a/Stocks/app/src/main/res/values/colors.xml
+++ b/Stocks/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#FFFF0000</color>
 <!-- all temp drawable colors    -->
     <color name="trendingColor">#FF018786</color>
     <color name="trendingSearch">#FF018786</color>
