--- a/Stocks/app/src/main/res/values/colors.xml
+++ b/Stocks/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#FF6200EE</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,7 +9,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#FFFF0000</color>
+    <color name="grey">#bbb</color>
 <!-- all temp drawable colors    -->
     <color name="trendingColor">#FF018786</color>
     <color name="trendingSearch">#FF018786</color>
