--- a/Stocks/app/src/main/res/layout/stock_detail.xml
+++ b/Stocks/app/src/main/res/layout/stock_detail.xml
@@ -36,16 +36,40 @@
         android:layout_centerVertical="true"/>
 
     <TextView
+        android:id="@+id/header_tick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dip"
+        android:textColor="#000000"/>
+
+    <TextView
         android:id="@+id/header_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fetching Data"
         android:layout_margin="10dip"
         android:textColor="#000000"
-        android:layout_below="@id/progressBar1"
-        android:layout_gravity="center_vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_below="@id/header_tick"/>
+
+    <TextView
+        android:id="@+id/header_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/toolbar"
+        android:layout_marginStart="10dip"
+        android:layout_marginTop="10dip"
+        android:layout_marginEnd="10dip"
+        android:layout_marginBottom="10dip"
+        android:gravity="end"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/header_change"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dip"
+        android:textColor="#000000"
+        android:layout_below="@id/header_price"
+        android:layout_alignEnd="@id/header_price"/>
 
 
 </RelativeLayout>
