--- a/Stocks/app/src/main/res/layout/section_ex1_stock_item.xml
+++ b/Stocks/app/src/main/res/layout/section_ex1_stock_item.xml
@@ -56,12 +56,19 @@
         android:id="@+id/changeImgItem"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
         android:contentDescription="@string/app_label"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+        android:layout_toEndOf="@+id/changeItem"
+        android:layout_toRightOf="@+id/changeItem"/>
+
+    <ImageView
+        android:id="@+id/arrowImgItem"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:contentDescription="stock_detail_arrow"
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+        android:layout_toEndOf="@+id/changeImgItem"
+        android:layout_toRightOf="@+id/changeImgItem"
+        android:icon="@drawable/ic_baseline_keyboard_arrow_right_24" />
 
 </RelativeLayout>
