--- a/Stocks/app/src/main/res/layout/stock_detail.xml
+++ b/Stocks/app/src/main/res/layout/stock_detail.xml
@@ -54,12 +54,14 @@
         android:id="@+id/header_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/toolbar"
+        android:layout_below="@id/toolbar"
         android:layout_marginStart="10dip"
         android:layout_marginTop="10dip"
         android:layout_marginEnd="10dip"
         android:layout_marginBottom="10dip"
+        android:layout_toEndOf="@id/toolbar"
         android:gravity="end"
+        android:textAlignment="textEnd"
         android:textColor="#000000" />
 
     <TextView
